assets/css/index.css
/* ... */
table caption {
  background: var(--base);
}

table td:first-child,
table th:first-child {
  padding-left: 0;
  background-image: linear-gradient(
    to right,
    var(--base) 50%,
    rgba(255, 217, 227, 0) 100%
  );
  background-size: 2px 100%;
  background-repeat: no-repeat;
}

table td:last-child,
table th:last-child {
  padding-right: 0;
  border-right: 0;
  background-image: linear-gradient(
    to left,
    var(--base) 50%,
    rgba(255, 217, 227, 0) 100%
  );
  background-position: 100% 0;
  background-size: 2px 100%;
  background-repeat: no-repeat;
}

table td:only-child,
table th:only-child {
  background-image: linear-gradient(
      to right,
      var(--base) 50%,
      rgba(255, 217, 227, 0) 100%
    ),
    linear-gradient(to left, var(--base) 50%, rgba(255, 217, 227, 0) 100%);
  background-position: 0 0, 100% 0;
  background-size: 2px 100%, 2px 100%;
  background-repeat: no-repeat, no-repeat;
}

table th {
  line-height: 1.2;
}

/* INPUT */
select {
  box-sizing: border-box;
  height: 2em;
  width: auto;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  padding-right: 1.2em;
  display: inline-block;

  font-size: 1em;
  border: 0px;
  border-radius: var(--border-radius);

  color: var(--text);
  background: var(--surface0);

  border: 1px solid var(--surface2);
  box-shadow: 0.1em 0.1em var(--surface2);
  cursor: pointer;

  background-position: top 55% right 0.35em;
  background-size: 0.5em;
  background-repeat: no-repeat;
  background-image: var(--arrow);

  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

select:focus,
select:hover {
  outline: 0;
  border: 1px solid var(--green);
  box-shadow: 0.1em 0.1em var(--green);
  transition: box-shadow ease 0.33s;
}

input[type="email"],
input[type="month"],
input[type="number"],
input[type="password"],
input[type="search"],
input[type="tel"],
input[type="text"],
input[type="time"],
input[type="url"],
input[type="week"],
input[type^="date"] {
  width: 100%;
  outline: 0;
  box-sizing: border-box;
  height: 2em;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  font-family: inherit;
  font-size: 1em;
  border: 1px solid var(--crust);
  border-radius: var(--border-radius);
  background: var(--mantle);
  color: var(--text);
  display: block;
  width: 100%;
  line-height: calc(2em - 1px * 2 - (0.25em - 1px) * 2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

input[type="button"],
input[type="reset"],
input[type="submit"] {
  outline: 0;
  box-sizing: border-box;
  height: 2em;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  font-family: inherit;
  font-size: 1em;
  border: 1px solid var(--crust);
  border-radius: var(--border-radius);
  display: inline-block;
  width: auto;
  background: var(--surface0);
  color: var(--text);
  cursor: pointer;

  box-shadow: 0.1em 0.1em var(--surface2);

  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

input[type="button"]:hover,
input[type="reset"]:hover,
input[type="submit"]:hover,
input[type="button"]:focus,
input[type="reset"]:focus,
input[type="submit"]:focus {
  outline: 0;
  border: 1px solid var(--green);
  box-shadow: 0.1em 0.1em var(--green);
  transition: box-shadow ease 0.33s;
}

input[type="file"] {
  outline: 0;
  box-sizing: border-box;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  font-family: inherit;
  border: 1px solid var(--crust);
  border-radius: var(--border-radius);
  background: var(--mantle);
  color: var(--text);
  cursor: pointer;
  display: block;
  width: 100%;
  height: auto;
  padding: 0.75em 0.5em;
  font-size: 12px;
  line-height: 1;
}

fieldset {
  padding: 0.5em 1em;
  border-radius: var(--border-radius);
}

form label,
form select,
output {
  display: block;
}

form label:not(:first-child) {
  margin-top: 1em;
}

form p label {
  display: inline;
}

form p label + label {
  margin-left: 1em;
}

textarea {
  outline: 0;
  box-sizing: border-box;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  font-family: inherit;
  font-size: 1em;
  border: 1px solid var(--curst);
  border-radius: var(--border-radius);
  background: var(--mantle);
  color: var(--text);
  display: block;
  width: 100%;
  line-height: calc(2em - 1px * 2 - (0.25em - 1px) * 2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 4.5em;
  resize: vertical;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

textarea[disabled],
button[disabled],
select[disabled],
input[disabled] {
  color: var(--subtext0);
  cursor: not-allowed;
}

label.chip {
  outline: 0;
  box-sizing: border-box;
  height: 2em;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  font-family: inherit;
  font-size: 1em;
  display: inline-block;
  width: auto;
  cursor: pointer;
  transition: background ease 0.33s;

  border-radius: 500px;

  border: 1px solid var(--surface0);
  background: var(--surface0);
  color: var(--text);

  margin-top: 0 !important;
  margin-right: 0.2em;
}

label.chip:focus,
label.chip:hover,
input.chip[type="checkbox"]:checked + label.chip {
  border: 1px solid var(--green);
  background: var(--green);
  color: var(--base);
}

input.chip[type="checkbox"] {
  display: none;
}

.blur {
  filter: blur(2px);
  z-index: -1;
  min-height: 100%;
  min-width: 100%;
  position: absolute;
  background-size: 200%;
  background-position: center;
}

